Z-indexes fixed for video.

--- a/src/index.css
+++ b/src/index.css
@@ -20,12 +20,15 @@
   fill: #eee;
 }
 
+.pitch-tool-container {
+  z-index: 1020;
+}
+
 .pitch-tool {
   width: 100%;
   height: 100%;
   border: 1px solid #333;
   font-family: Roboto, Sans-Serif;
-  z-index: 100;
 }
 
 .pitch-tool .control-box {
@@ -172,7 +175,7 @@
   color: #fff;
   width: calc(60% / 15);
   height: 60%;
-  z-index: 101;
+  z-index: 1021;
   position: absolute;
   margin-left: calc(-30% / 15);
 }
